# qb

./: CLAUDE.md  README.md  pyproject.toml
src/qb/: __main__.py  client.py  config.py  torrent.py
src/sb/: __main__.py  bencode.py  category.py  config.py  diff.py  fastresume.py  norm.py  torrent.py
