[project]
name = "qb"
version = "0.1.0"
description = "CLI for driving qBittorrent instances"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bencode-py>=4.0.0",
    "click>=8.3.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "qbittorrent-api>=2025.7.0",
]

[tool.uv]
package = true

[project.scripts]
qb = "qb.__main__:main"
